examples/compiler_errors/src/index.did
type BadVariant = variant { thing };
service : () -> { bad_variant : (BadVariant) -> () query }